bisonc++ (5.02.00)

  * The polymorphic semantic values implementation uses a unique_ptr when
    transferring semantic values inside the geerated parser (including
    bisonc++'s own parser). See the documentation for details.

  * Added new option/directive stack-expansion defining the number of elements
    to add to a completely full semantic value stack.

  * Enlarging the semantic value stack does not require copying existing
    semantic values to the enlarged semantic value stack. Either resizing is
    used (when the capacity allows it) or the stored semantic values are moved
    to the enlarged stack, which is then swapped with the parser's semantic
    values stack.

  * More in general: the generated parser itself does not internally copy
    semantic values anymore. Copying is only used in the grammar's action
    blocks .

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 13 May 2016 13:46:18 +0530

bisonc++ (5.01.00)

  * Reimplemented polymorphic semantic values: the Meta__::Base class now is
    a virtual bease class.

  * Some templated operator& functions cannot handle two DebugMode__
    arguments. To prevent compilation errors in those cases a 
    DebugMode__ operator&(DebugMode__, DebugMode__) function was added to
    the parserbase-skeleton.

  * The documentation erroneously referred to an undefined --action-cases
    option. Instead, --debug should be used and setDebug(Parser::ACTIONCASES)
    should be called. Code and documentation modified accordingly.

  * Added the script documentation/regression/runone to run a single
    regression test.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 05 May 2016 20:35:39 +0530

bisonc++ (5.00.01)

  * Fixed verbinsert calls: yodl 3.07.01 implements a macro 'verbinsert'
    rendering bisonc++'s own definition superfluous. The new definition
    requires 1 argument, and the old one 2, so the verbinsert calls were
    updated accordingly.
