@@ -11,7 +11,7 @@
 <body>
 <hr/>
 <h1 id="title">bisonc++</h1>
-<h2 id="author">bisonc++.5.02.00.tar.gz</h2>
+<h2 id="author">bisonc++.5.02.01.tar.gz</h2>
 <h2 id="date">2005-2016</h2>
 
 <!DOCTYPE html><html><head>
@@ -46,7 +46,7 @@
 <body>
 <hr/>
 <h1 id="title">bisonc++(1)</h1>
-<h2 id="author">bisonc++.5.02.00.tar.gz bisonc++ parser generator</h2>
+<h2 id="author">bisonc++.5.02.01.tar.gz bisonc++ parser generator</h2>
 <h2 id="date">2005-2016</h2>
 
 
