@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Bisonc++ V 5.02.00</title>
+<title>Bisonc++ V 5.02.01</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
@@ -11,7 +11,7 @@
 </head>
 <body>
 <hr/>
-<h1 id="title">Bisonc++ V 5.02.00</h1>
+<h1 id="title">Bisonc++ V 5.02.01</h1>
 <h2 id="author">Frank B. Brokken (f.b.brokken@rug.nl)<br/></h2>
 
 <h2 id="affiliation">Center for Information Technology, University of Groningen</h2><h2 id="date">2005-2016</h2>
@@ -33,16 +33,16 @@ by its tag or download the matching <code >.zip</code> or <code >.tar.gz</code> 
 release page):
 <p>
 <ul>
-        <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/5.02.00">5.01.00</a>
+        <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/5.02.01">5.02.01</a>
+May 20 2016;
+        <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/5.02.00">5.02.00</a>
 May 15 2016;
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/5.01.00">5.01.00</a>
 May 06 2016;
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/5.00.01">5.00.01</a>
 Apr 26 2016;
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/5.00.00">5.00.00</a>
-Apr 13 2016;
-        <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/4.13.01">4.13.01</a>
-Dec 19 2015.
+Apr 13 2016.
         </ul>
     
 <p>
