@@ -1,3 +1,12 @@
+bisonc++ (5.02.01)
+
+  * Repaired an error in 'build install LOG...'.
+
+  * Verified that 'selection' in 'build install selection' was correctly
+    specified. 
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 18 May 2016 17:34:28 +0530
+
 bisonc++ (5.02.00)
 
   * The polymorphic semantic values implementation uses a unique_ptr when
